<resources>
    <string name="app_name">TCFv1_GDPR-MetaApp</string>

    <string name="account_id">Account ID</string>
    <string name="account_id_placeholder">Enter account id here</string>
    <string name="property_name_placeholder">Enter property name here</string>
    <string name="property_name">Property Name</string>
    <string name="property_id">Property Id</string>
    <string name="pm_id">Privacy Manager Id</string>
    <string name="staging_campaign">Staging Campaign:</string>
    <string name="save">Save</string>
    <string name="add_property">Add Property</string>
    <string name="review_consents">Review Consents</string>
    <string name="property_list_title">Property List</string>
    <string name="new_property_title">New Property</string>
    <string name="details_button_text">Details</string>
    <string name="edit_button_text">Edit</string>
    <string name="network_check_message">Please check your internet connection</string>
    <string name="property_details_title">Property Info</string>
    <string name="edit_property_title">Edit Property</string>
    <string name="please_press_at_top_right_corner_to_add_property">Please tap on  +  to add new property</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="empty_accountid_propertyname_message">Please enter Account ID, Property ID, Property Name, Privacy Manager ID</string>
    <string name="targeting_params">Targeting Parameter</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="enter_value_placeholder">Enter Value</string>
    <string name="enter_key_placeholder">Enter Key</string>
    <string name="btn_add_params">Add</string>
    <string name="no_targeting_params_added">Targeting parameter data is not added</string>
    <string name="targeting_params_list">Targeting Parameter List</string>
    <string name="delete_confirmation_message">Do you want to delete this property?</string>
    <string name="message_already_shown_alert">Message already shown, it can\'t be shown again as per condition set for message</string>
    <string name="consentuuid">ConsentUUID</string>
    <string name="euconsent">EUConsent</string>
    <string name="consentuuid_not_available">ConsentUUID not available</string>
    <string name="euconsent_not_available">EUConsent not available</string>
    <string name="vendor_and_purpose_consents_list">Vendor and Purpose consents List</string>
    <string name="vendor_and_purpose_consents_not_available">Vendor and Purpose consents are not available.</string>
    <string name="property_info_screen_title">Property Debug Info</string>
    <string name="consent_id">ID :</string>
    <string name="consent_name">Name :</string>
    <string name="cookie_confirmation_message">Cookies for all properties will be cleared. \n Do you want to proceed?</string>
    <string name="property_details_not_available">Property details you are looking for not available.</string>
    <string name="unable_to_clear_cookies">Unable to clear cookies. Please try again.</string>
    <string name="no_message_matching_scenario">There is no message matching the scenario based on the property info and device local data. Consider reviewing the property info or clearing the cookies. If that was intended, just ignore this message.</string>
    <string name="property_details_exists">Property details already exists.</string>
    <string name="authId">AuthId</string>
    <string name="show_pm">Show PM</string>
    <string name="show_pm_btn">Show PM</string>
</resources>
