<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.NewPropertyActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAccountID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/account_id"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAccountID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:longClickable="false"
                android:textSize="@dimen/text_size_20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSiteId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/property_id"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPropertyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="@dimen/text_size_20" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSiteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/property_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPropertyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size_20" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPMId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/pm_id"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPMId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size_20" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAuthID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/authId"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAuthID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:longClickable="false"
                android:textSize="@dimen/text_size_20" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_stagingCampaign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/staging_campaign"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggleStaging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_weight="0.3"
                android:theme="@style/switch.Theme" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_showPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/show_pm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggleShowPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_weight="0.3"
                android:theme="@style/switch.Theme"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_targetingParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/targeting_params"
            android:textColor="@color/light_green"
            android:textSize="@dimen/text_size_20" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/key"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size_20" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/value"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="@dimen/text_size_20" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_addParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawableLeft="@drawable/add_green_drawable"
            android:fontFamily="@font/roboto_bold"
            android:gravity="end"
            android:text="@string/btn_add_params"
            android:textColor="@color/light_green"
            android:textSize="@dimen/text_size_20"/>


        <TextView
            android:id="@+id/tv_targetingParamsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/targeting_params_list"
            android:textColor="@color/light_green"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/targetingParamsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:dividerHeight="10dp"
            android:outlineProvider="bounds"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/tv_noTargetingParams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:text="@string/no_targeting_params_added"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
